# webrtc-audio-processing

./: .gitignore  Makefile.am  README.md  UPDATING.md  configure.ac  meson.build
webrtc/: Makefile.am
webrtc/api/: Makefile.am  meson.build
webrtc/audio/: Makefile.am
webrtc/audio/utility/: Makefile.am
webrtc/base/: Makefile.am  platform_thread.cc
webrtc/common_audio/: Makefile.am  meson.build
webrtc/modules/: Makefile.am
webrtc/modules/audio_coding/: Makefile.am  meson.build
webrtc/modules/audio_coding/codecs/isac/main/source/: bandwidth_estimator.c  crc.c
webrtc/modules/audio_processing/: Makefile.am  meson.build
webrtc/modules/video_coding/: Makefile.am
webrtc/rtc_base/: meson.build
webrtc/system_wrappers/: BUILD.gn  Makefile.am  meson.build
