lib_LTLIBRARIES = libwebrtc_audio_processing.la

libwebrtc_audio_processing_la_SOURCES = include/audio_processing.cc \
					include/audio_processing.h \
					include/config.cc \
					include/config.h \
					aec/aec_common.h \
					aec/aec_core.cc \
					aec/aec_core.h \
					aec/aec_core_optimized_moethods.h \
					aec/aec_resampler.cc \
					aec/aec_resampler.h \
					aec/echo_cancellation.cc \
					aec/echo_cancellation.h \
					aecm/include/echo_control_mobile.h \
					aec3/adaptive_fir_filter.cc \
					aec3/adaptive_fir_filter.h \
					aec3/aec3_common.cc \
					aec3/aec3_common.h \
					aec3/aec3_fft.cc \
					aec3/aec3_fft.h \
					aec3/aec_state.cc \
					aec3/aec_state.h \
					aec3/block_framer.cc \
					aec3/block_framer.h \
					aec3/block_processor.cc \
					aec3/block_processor.h \
					aec3/block_processor_metrics.cc \
					aec3/block_processor_metrics.h \
					aec3/cascaded_biquad_filter.cc \
					aec3/cascaded_biquad_filter.h \
					aec3/comfort_noise_generator.cc \
					aec3/comfort_noise_generator.h \
					aec3/decimator_by_4.cc \
					aec3/decimator_by_4.h \
					aec3/downsampled_render_buffer.cc \
					aec3/downsampled_render_buffer.h \
					aec3/echo_canceller3.cc \
					aec3/echo_canceller3.h \
					aec3/echo_path_delay_estimator.cc \
					aec3/echo_path_delay_estimator.h \
					aec3/echo_path_variability.cc \
					aec3/echo_path_variability.h \
					aec3/echo_remover.cc \
					aec3/echo_remover.h \
					aec3/echo_remover_metrics.cc \
					aec3/echo_remover_metrics.h \
					aec3/erl_estimator.cc \
					aec3/erl_estimator.h \
					aec3/erle_estimator.cc \
					aec3/erle_estimator.h \
					aec3/fft_data.h \
					aec3/frame_blocker.cc \
					aec3/frame_blocker.h \
					aec3/main_filter_update_gain.cc \
					aec3/main_filter_update_gain.h \
					aec3/matched_filter.cc \
					aec3/matched_filter.h \
					aec3/matched_filter_lag_aggregator.cc \
					aec3/matched_filter_lag_aggregator.h \
					aec3/output_selector.cc \
					aec3/output_selector.h \
					aec3/render_buffer.cc \
					aec3/render_buffer.h \
					aec3/render_delay_buffer.cc \
					aec3/render_delay_buffer.h \
					aec3/render_delay_controller.cc \
					aec3/render_delay_controller.h \
					aec3/render_delay_controller_metrics.cc \
					aec3/render_delay_controller_metrics.h \
					aec3/render_signal_analyzer.cc \
					aec3/render_signal_analyzer.h \
					aec3/residual_echo_estimator.cc \
					aec3/residual_echo_estimator.h \
					aec3/shadow_filter_update_gain.cc \
					aec3/shadow_filter_update_gain.h \
					aec3/subtractor.cc \
					aec3/subtractor.h \
					aec3/subtractor_output.h \
					aec3/suppression_filter.cc \
					aec3/suppression_filter.h \
					aec3/suppression_gain.cc \
					aec3/suppression_gain.h \
					aec3/vector_math.h \
					aecm/echo_control_mobile.cc \
					aecm/echo_control_mobile.h \
					aecm/aecm_core.cc \
					aecm/aecm_core.h \
					aecm/aecm_core_c.cc \
					aecm/aecm_defines.h \
					agc/legacy/analog_agc.c \
					agc/legacy/analog_agc.c.h \
					agc/legacy/digital_agc.c \
					agc/legacy/digital_agc.h \
					agc/legacy/gain_control.h \
					agc/agc.cc \
					agc/agc.h \
					agc/agc_manager_direct.cc \
					agc/agc_manager_direct.h \
					agc/gain_map_internal.h \
					agc/loudness_histogram.cc \
					agc/loudness_histogram.h \
					agc/utility.cc \
					agc/utility.h \
					beamformer/array_util.cc \
					beamformer/array_util.h \
					beamformer/complex_matrix.h \
					beamformer/covariance_matrix_generator.cc \
					beamformer/covariance_matrix_generator.h \
					beamformer/matrix.h \
					beamformer/matrix_test_helpers.h \
					beamformer/nonlinear_beamformer.cc \
					beamformer/nonlinear_beamformer.h \
					echo_detector/circular_buffer.cc \
					echo_detector/circular_buffer.h \
					echo_detector/mean_variance_estimator.cc \
					echo_detector/mean_variance_estimator.h \
					echo_detector/moving_max.cc \
					echo_detector/moving_max.h \
					echo_detector/normalized_covariance_estimator.cc \
					echo_detector/normalized_covariance_estimator.h \
					intelligibility/intelligibility_enhancer.h \
					intelligibility/intelligibility_utils.h \
					intelligibility/intelligibility_enhancer.cc \
					intelligibility/intelligibility_utils.cc \
					level_controller/biquad_filter.cc \
					level_controller/biquad_filter.h \
					level_controller/down_sampler.cc \
					level_controller/down_sampler.h \
					level_controller/gain_applier.cc \
					level_controller/gain_applier.h \
					level_controller/gain_selector.cc \
					level_controller/gain_selector.h \
					level_controller/level_controller.cc \
					level_controller/level_controller.h \
					level_controller/level_controller_constants.h \
					level_controller/noise_level_estimator.cc \
					level_controller/noise_level_estimator.h \
					level_controller/noise_spectrum_estimator.cc \
					level_controller/noise_spectrum_estimator.h \
					level_controller/peak_level_estimator.cc \
					level_controller/peak_level_estimator.h \
					level_controller/saturating_gain_estimator.cc \
					level_controller/saturating_gain_estimator.h \
					level_controller/signal_classifier.cc \
					level_controller/signal_classifier.h \
					logging/apm_data_dumper.cc \
					logging/apm_data_dumper.h \
					transient/common.h \
					transient/daubechies_8_wavelet_coeffs.h \
					transient/dyadic_decimator.h \
					transient/file_utils.h \
					transient/moving_moments.h \
					transient/transient_detector.h \
					transient/transient_suppressor.h \
					transient/wpd_node.h \
					transient/wpd_tree.h \
					transient/click_annotate.cc \
					transient/file_utils.cc \
					transient/moving_moments.cc \
					transient/transient_detector.cc \
					transient/transient_suppressor.cc \
					transient/wpd_node.cc \
					transient/wpd_tree.cc \
					utility/block_mean_calculator.cc \
					utility/block_mean_calculator.h \
					utility/delay_estimator.cc \
					utility/delay_estimator.h \
					utility/delay_estimator_internal.h \
					utility/delay_estimator_wrapper.cc \
					utility/delay_estimator_wrapper.h \
					utility/ooura_fft.cc \
					utility/ooura_fft.h \
					utility/ooura_fft_tables_common.h \
					vad/common.h \
					vad/gmm.h \
					vad/noise_gmm_tables.h \
					vad/pitch_based_vad.h \
					vad/pitch_internal.h \
					vad/pole_zero_filter.h \
					vad/standalone_vad.h \
					vad/vad_audio_proc.h \
					vad/vad_audio_proc_internal.h \
					vad/vad_circular_buffer.h \
					vad/voice_activity_detector.h \
					vad/voice_gmm_tables.h \
					vad/gmm.cc \
					vad/pitch_based_vad.cc \
					vad/pitch_internal.cc \
					vad/pole_zero_filter.cc \
					vad/standalone_vad.cc \
					vad/vad_audio_proc.cc \
					vad/vad_circular_buffer.cc \
					vad/voice_activity_detector.cc \
					audio_buffer.cc \
					audio_buffer.h \
					audio_processing_impl.cc \
					audio_processing_impl.h \
					common.h \
					echo_cancellation_impl.cc \
					echo_cancellation_impl.h \
					echo_control_mobile_impl.cc \
					echo_control_mobile_impl.h \
					gain_control_for_experimental_agc.cc \
					gain_control_for_experimental_agc.h \
					gain_control_impl.cc \
					gain_control_impl.h \
					level_estimator_impl.cc \
					level_estimator_impl.h \
					low_cut_filter.cc \
					low_cut_filter.h \
					noise_suppression_impl.cc \
					noise_suppression_impl.h \
					render_queue_item_verifier.h \
					residual_echo_detector.cc \
					residual_echo_detector.h \
					rms_level.cc \
					rms_level.h \
					splitting_filter.cc \
					splitting_filter.h \
					three_band_filter_bank.cc \
					three_band_filter_bank.h \
					typing_detection.cc \
					typing_detection.h \
					voice_detection_impl.cc \
					voice_detection_impl.h

if NS_FIXED
COMMON_CFLAGS += -DWEBRTC_NS_FIXED=1
COMMON_CXXFLAGS += -DWEBRTC_NS_FIXED=1
libwebrtc_audio_processing_la_SOURCES += \
					ns/include/noise_suppression_x.h \
					ns/noise_suppression_x.c \
					ns/nsx_defines.h \
					ns/nsx_core.c \
					ns/nsx_core.h \
					ns/nsx_core_c.c
if HAVE_NEON
libwebrtc_audio_processing_la_SOURCES += \
					ns/nsx_core_neon.c
endif
else
COMMON_CFLAGS += -DWEBRTC_NS_FLOAT=1
COMMON_CXXFLAGS += -DWEBRTC_NS_FLOAT=1
libwebrtc_audio_processing_la_SOURCES += \
					ns/include/noise_suppression.h \
					ns/noise_suppression.c \
					ns/defines.h \
					ns/ns_core.c \
					ns/ns_core.h \
					ns/windows_private.h
endif

if HAVE_X86
noinst_LTLIBRARIES = libwebrtc_audio_processing_privatearch.la
LIBWEBRTC_PRIVATEARCH=libwebrtc_audio_processing_privatearch.la
libwebrtc_audio_processing_privatearch_la_SOURCES = \
					aec/aec_core_sse2.cc \
					utility/ooura_fft_sse2.cc \
					utility/ooura_fft_tables_neon_sse2.h

libwebrtc_audio_processing_privatearch_la_CFLAGS = $(AM_CFLAGS) $(COMMON_CFLAGS) -msse2
libwebrtc_audio_processing_privatearch_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS) -msse2
libwebrtc_audio_processing_privatearch_la_LDFLAGS = $(AM_LDFLAGS)
endif

if HAVE_NEON
libwebrtc_audio_processing_la_SOURCES += \
					aec/aec_core_neon.cc \
					aecm/aecm_core_neon.cc \
					utility/ooura_fft_neon.cc \
					utility/ooura_fft_tables_neon_sse2.h
endif

libwebrtc_audio_processing_la_CFLAGS = $(AM_CFLAGS) $(COMMON_CFLAGS) \
				       -DWEBRTC_APM_DEBUG_DUMP=0 \
				       -DWEBRTC_INTELLIGIBILITY_ENHANCER=1
libwebrtc_audio_processing_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS) \
				       -DWEBRTC_APM_DEBUG_DUMP=0 \
				       -DWEBRTC_INTELLIGIBILITY_ENHANCER=1

libwebrtc_audio_processing_la_LIBADD = $(top_builddir)/webrtc/libwebrtc.la \
				       $(top_builddir)/webrtc/base/libbase.la \
				       $(top_builddir)/webrtc/system_wrappers/libsystem_wrappers.la \
				       $(top_builddir)/webrtc/common_audio/libcommon_audio.la \
				       $(top_builddir)/webrtc/modules/audio_coding/libaudio_coding.la \
				       $(LIBWEBRTC_PRIVATEARCH) \
				       $(GNUSTL_LIBS)
libwebrtc_audio_processing_la_LDFLAGS = $(AM_LDFLAGS) $(COMMON_LDFLAGS) \
					-no-undefined \
					-version-info $(LIBWEBRTC_AUDIO_PROCESSING_VERSION_INFO)

# FIXME: The MIPS optimisations need to be hooked up once we have the
# autotools conditionals in place
EXTRA_DIST = BUILD.gn \
	     aec/aec_core_mips.c \
	     aec/aec_rdft_neon.c \
	     aecm/aecm_core_mips.c \
	     ns/nsx_core_mips.c
